<resources>
    <string name="app_name">WhenBus</string>
    <!-- Strings related to login -->

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_resgister">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_example">Sign in</string>
    <string name="destination">Destination...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_parallax">Parallax</string>
    <string name="local_service_started">\"Local service started\"</string>
    <string name="local_service_stopped">Local service stoped</string>
    <string name="local_service_label">local service</string>
</resources>
